--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@ html {
          }
       </style>
 
-
+<style>
+         h1 {
+         color: white;
+         text-shadow: 2px 2px 4px #000000;
+         }
+      </style>
 
 
 
@@ -34,10 +39,22 @@ html {
          <a href="https://jar.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
          <a href=" https://www.youtube.com/channel/UCx3XuBeIP4O2g9dKLlAZNnQ" "><font size="4"face="helvetica" color="">Visit The Channel</font></a>
          <a href="https://www.youtube.com/watch?v=ck6t5saBF98" "><font size="4"face="Helvetica" color="">Latest Upload</font></a>
-         <a href="https://jar.github.io/what/" "><font size="4"face="Helvetica" color="">What is Jar</font></a>
+         <a href="https://jar.github.io/Lore/" "><font size="4"face="Helvetica" color="">Jarian Lore</font></a>
          <a href="https://jar.github.io/media/" "><font size="4"face="Helvetica" color="">Social Media</font></a>
          <a href="https://jar.github.io/sources/" "><font size="4"face="Helvetica" color="">Sources</font></a>
+<h1><font size="24%" face="Helvetica" color="white">Welcome to Micronation of Jar!</font><h1>
 
+
+<img src="https://vignette4.wikia.nocookie.net/micronations/images/4/49/Flag_of_sabinaCAT.png/revision/latest?cb=20170702115413" style="padding-left:0%;width:15%;float:left;">
+
+
+
+
+ <img src="https://vignette4.wikia.nocookie.net/micronations/images/4/49/Flag_of_sabinaCAT.png/revision/latest?cb=20170702115413" style="padding-left:0%;width:15%;float:right;">
+
+<h1><font size="22%" face="Helvetica" color="white">Who are we?</font><h1>
+
+<p style="border: 5px solid black; width: 60%;"><font size="6" face="helvetica" color="blue">The nation of Jar is portable jar based micronation, generally located in Surrey, Canada. The population is based on the number of subcribers to the 'Deron For Super President' You Tube channel. The nation's aim it to conquer the universe and solve all of its problems.</font></p>
 
 
 </body>
