--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@ html {
 <p style="border: 5px solid black; width: 60%;"><font size="6" face="helvetica" color="blue">The nation of Jar is portable jar based micronation, generally located in Surrey, Canada. The population is based on the number of subcribers to the 'Deron For Super President' You Tube channel. The nation's aim it to conquer the universe and solve all of its problems.</font></p>
 
 
+
+<div id="contentframe" style="position:absolute; padding-top: 0%; right: 70%;">
+
+<p style="border: 5px solid black; width: 96%;"><font size="3" face="helvetica" color="green">Jar is a 'Super Presidency' (Sort of Absolute Monarchy / Nicer version of a Dictatorship) ruled by Deron. No democratic elections are held in the nation. Deron vowed to rewrite the laws of physics in his image once he had conquered the universe.</font></p></div>
+
+<div id="contentframe" style="position:absolute; padding-top: %; right: 34.5%;">
+
+<iframe width="500" height="300" src="https://www.youtube.com/embed/w0L5MLxUwsc?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></div>
+
+<div id="contentframe" style="position:absolute; padding-top: 0%; left: 70%;">
+
+<p style="border: 5px solid black; width: 96%;"><font size="3" face="helvetica" color="green">Pickles are the national dish. Jarians also praise the book 'The Very Hungry Caterpillar' by Eric Carle. SPC Deron famously one said....                                                                                                                                                                                                     
+"<i>If you eat through all your problems and everything you do in life, everything will work out for you and you'll wake up better than ever, with the ablity to fly</i>"<b> ~Deron, Super Presidential Candidate</b></font></p>
+
+
 </body>
 </html>
 
