--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@ html {
 </head>
 <body>
  <center>
-         <a href="https://jar.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
+<a href="https://jar.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
          <a href=" https://www.youtube.com/channel/UCx3XuBeIP4O2g9dKLlAZNnQ" "><font size="4"face="helvetica" color="">Visit The Channel</font></a>
-         <a href="https://www.youtube.com/watch?v=ck6t5saBF98" "><font size="4"face="Helvetica" color="">Latest Upload</font></a>
-         <a href="https://jar.github.io/Lore/" "><font size="4"face="Helvetica" color="">Jarian Lore</font></a>
-         <a href="https://jar.github.io/media/" "><font size="4"face="Helvetica" color="">Social Media</font></a>
-         <a href="https://jar.github.io/sources/" "><font size="4"face="Helvetica" color="">Sources</font></a>
+         <a href="https://deronforsuperpresident.github.io/video/" "><font size="4"face="Helvetica" color="">Latest Upload</font></a>
+         <a href="https://deronforsuperpresident.github.io/Lore/" "><font size="4"face="Helvetica" color="">Jarian Lore</font></a>
+         <a href="https://deronforsuperpresident.github.io/media/" "><font size="4"face="Helvetica" color="">Social Media</font></a>
+         <a href="https://deronforsuperpresident.github.io/sources/" "><font size="4"face="Helvetica" color="">Sources</font></a>
+
+
 <h1><font size="24%" face="Helvetica" color="white">Welcome to Micronation of Jar!</font><h1>
 
 
