--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html {
 </head>
 <body>
  <center>
-<a href="https://jar.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
+<a href="https://deronforsuperpresident.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
          <a href=" https://www.youtube.com/channel/UCx3XuBeIP4O2g9dKLlAZNnQ" "><font size="4"face="helvetica" color="">Visit The Channel</font></a>
          <a href="https://deronforsuperpresident.github.io/video/" "><font size="4"face="Helvetica" color="">Latest Upload</font></a>
          <a href="https://deronforsuperpresident.github.io/Lore/" "><font size="4"face="Helvetica" color="">Jarian Lore</font></a>
