--- a/video/index.html
+++ b/video/index.html
@@ -47,7 +47,7 @@ html {
 <h1><font size="6%" face="Helvetica" color="white">Latest Upload</font><h1>
 
 <div id="contentframe" style="padding-top: 1%; ">
-<iframe width="1120" height="630" src="https://www.youtube.com/embed/ck6t5saBF98?rel=0&amp;showinfo=0" frameborder="1" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=Qc_pkFLDOck" frameborder="1" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 
 </body>
