--- a/sources/index.html
+++ b/sources/index.html
@@ -32,8 +32,29 @@ html {
       </style>
 
 
+<style>
+/* unvisited link */
+a:link {
+    color: red;
+}
 
+/* visited link */
+a:visited {
+    color: green;
+}
+
+/* mouse over link */
+a:hover {
+    color: hotpink;
+}
+
+/* selected link */
+a:active {
+    color: blue;
+}
+</style>
 </head>
+
 <body>
  <center>
          <a href="https://deronforsuperpresident.github.io/" "><font size="4"face="Helvetica" color="">Home</font></a>
@@ -46,11 +67,16 @@ html {
 
 <h1><font size="5%" face="Helvetica" color="white">Sources Used To Create This Page</font><h1>
 
-<p>http://micronations.wikia.com/wiki/Jar</p>
-<p>https://www.youtube.com/channel/UCx3XuBeIP4O2g9dKLlAZNnQ</p>
-<p>https://hetalian-jet.aminoapps.com/page/item/jar/lLYE_4QtGIXmBWPPl4jjM48gjwxN5LXdgQ</p>
-<p>https://deronforsuperpresident.tumblr.com/</p>
-<p>https://plus.google.com/communities/101188191101942715411</p>
+<p><b><a href="http://micronations.wikia.com/wiki/Jar" target="_blank">Micronation Wiki</a></b></p>
+
+<p><b><a href="https://www.youtube.com/channel/UCx3XuBeIP4O2g9dKLlAZNnQ" target="_blank">Deron For Super President's Youtube Channel</a></b></p>
+
+<p><b><a href="https://hetalian-jet.aminoapps.com/page/item/jar/lLYE_4QtGIXmBWPPl4jjM48gjwxN5LXdgQ" target="_blank">Jar's Hetalia Wiki Page</a></b></p>
+
+<p><b><a href="https://deronforsuperpresident.tumblr.com/" target="_blank">Jar's Tumblr</a></b></p>
+
+<p><b><a href="https://plus.google.com/communities/101188191101942715411" target="_blank">Jar's Google+ Page</a></b></p>
+
 
 </body>
 </html>
